# basic_py_package

./: LICENSE  README.md  pyproject.toml  setup.py
basic_py_package/: __init__.py
