[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basic_py_package"
version = "0.1.0"
authors = [
    {name = "Christian Schinkel", email = "christian@example.com"}
]
description = "A basic Python package template that can be installed via pip"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["example", "package", "template", "basic"]

[project.urls]
"Homepage" = "https://github.com/ChristianSchinkel/basic_py_package"
"Bug Tracker" = "https://github.com/ChristianSchinkel/basic_py_package/issues"
"Source Code" = "https://github.com/ChristianSchinkel/basic_py_package"

[tool.setuptools]
packages = ["basic_py_package"]
